08-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: skillzverse

spec:
  replicas: 3

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:

      imagePullSecrets:
      - name: dockerhub-secret

      containers:

      - name: backend

        image: saihari1/skillzverse:server

        imagePullPolicy: Always

        ports:
        - containerPort: 8090
