10-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: skillzverse

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      imagePullSecrets:
      - name: dockerhub-secret

      containers:

      - name: frontend

        image: saihari1/skillzverse:client

        imagePullPolicy: Always

        ports:
        - containerPort: 3000
