09-backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: skillzverse

spec:

  selector:
    app: backend

  ports:
  - port: 80
    targetPort: 8090

  type: ClusterIP
