11-frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: skillzverse

spec:

  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
